syntax = "proto3";
package lh_proto;

option go_package = ".;model";
option java_multiple_files = true;
option java_package = "io.littlehorse.common.proto";

import "status.proto";
import "variable.proto";
import "wf_spec.proto";
import "external_event.proto";
import "google/protobuf/timestamp.proto";

// This is not quite a command, but rather an output from the scheduler
// and is input to the Task workers. Perhaps it should go in a
// different file?
message TaskScheduleRequestPb {
    string task_def_id = 1;
    string task_def_name = 2;
    int32 thread_run_number = 4;
    int32 task_run_number = 5;
    int32 task_run_position = 6;
    string wf_run_id = 7;
    string wf_run_event_queue = 8;
    string wf_spec_id = 9;
    int32 attempt_number = 10;
    string node_name = 11;
    map<string, VariableValuePb> variables = 12;
}

// This section contains Input Events to the Scheduler.
message WfRunRequestPb {
    optional string wf_run_id = 1;
    string wf_spec_id = 2;
    map<string, VariableValuePb> variables = 3;
}

message TaskStartedEventPb {
    int32 thread_run_number = 1;
    int32 task_run_number = 2;
    int32 task_run_position = 3;
    google.protobuf.Timestamp time = 4;
    string wf_run_id = 5;
}

message TaskResultEventPb {
    int32 thread_run_number = 1;
    int32 task_run_number = 2;
    int32 task_run_position = 3;
    google.protobuf.Timestamp time = 4;

    TaskResultCodePb result_code = 5;
    optional VariableValuePb output = 6;
    optional VariableValuePb log_output = 7;

    string wf_run_id = 8;
}

message WfRunEventPb {
    string wf_run_id = 1;
    optional string wf_spec_id = 2;
    google.protobuf.Timestamp time = 3;
    oneof event {
        WfRunRequestPb run_request = 4;
        TaskStartedEventPb started_event = 5;
        TaskResultEventPb task_result = 6;
        ExternalEventPb external_event = 7;
    }
    optional int32 thread_run_number = 8;
}

// This section contains commands for metadata management

message PutWfSpecPb {
    WfSpecPb spec = 1;
}

message PutTaskDefPb {
    TaskDefPb spec = 1;
}

message PutExternalEventDefPb {
    ExternalEventDefPb spec = 1;
}

// This is the schema of everything that flows through the Central Command topic.
message CommandPb {
    google.protobuf.Timestamp time = 1;
    optional string command_id = 2;
    oneof payload {
        TaskResultEventPb task_result_event = 3;
        TaskStartedEventPb task_start_event = 4;
        ExternalEventPb external_event = 5;
        PutWfSpecPb put_wf_spec = 6;
        PutTaskDefPb put_task_def = 7;
        PutExternalEventDefPb put_external_event = 8;
        WfRunRequestPb wf_run_request = 9;
    }
}
